[workspace]
resolver = "2"
members = [
    "drm/core",
    "drm/widevine-proto",
    "drm/widevine",
    "drm/playready-format",
    "drm/playready",
    "drm/cli",
    "vidwall",
    "vidplayer",
    "vidproxy",
]

[workspace.package]
version = "0.0.0"
edition = "2024"
publish = false

[workspace.dependencies]
ffmpeg-types = { git = "https://github.com/tibellium/crates", rev = "a541dd416c23911b59b6a6477a637d03fc04ebda" }
ffmpeg-source = { git = "https://github.com/tibellium/crates", rev = "a541dd416c23911b59b6a6477a637d03fc04ebda" }
ffmpeg-decode = { git = "https://github.com/tibellium/crates", rev = "a541dd416c23911b59b6a6477a637d03fc04ebda" }
ffmpeg-transform = { git = "https://github.com/tibellium/crates", rev = "a541dd416c23911b59b6a6477a637d03fc04ebda" }
ffmpeg-encode = { git = "https://github.com/tibellium/crates", rev = "a541dd416c23911b59b6a6477a637d03fc04ebda" }
ffmpeg-sink = { git = "https://github.com/tibellium/crates", rev = "a541dd416c23911b59b6a6477a637d03fc04ebda" }

[profile.release]
opt-level = 3
lto = true
