[workspace]
resolver = "2"
members = [
    "drm/core",
    "drm/widevine-proto",
    "drm/widevine",
    "drm/playready-format",
    "drm/playready",
    "drm/cli",
    "vidwall",
    "vidplayer",
    "vidproxy",
]

[workspace.package]
version = "0.0.0"
edition = "2024"
publish = false

[workspace.dependencies]
chrome-browser = { git = "https://github.com/tibellium/crates", rev = "5c44a404e0d1418facf73ed8317a7745d57601a0" }
ffmpeg-types = { git = "https://github.com/tibellium/crates", rev = "5c44a404e0d1418facf73ed8317a7745d57601a0" }
ffmpeg-source = { git = "https://github.com/tibellium/crates", rev = "5c44a404e0d1418facf73ed8317a7745d57601a0" }
ffmpeg-decode = { git = "https://github.com/tibellium/crates", rev = "5c44a404e0d1418facf73ed8317a7745d57601a0" }
ffmpeg-transform = { git = "https://github.com/tibellium/crates", rev = "5c44a404e0d1418facf73ed8317a7745d57601a0" }
ffmpeg-encode = { git = "https://github.com/tibellium/crates", rev = "5c44a404e0d1418facf73ed8317a7745d57601a0" }
ffmpeg-sink = { git = "https://github.com/tibellium/crates", rev = "5c44a404e0d1418facf73ed8317a7745d57601a0" }

[profile.release]
opt-level = 3
lto = true
