[package]
name = "drm-sniff"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "drm-sniff"
path = "src/main.rs"

[dependencies]
chrome-browser = { git = "https://github.com/tibellium/crates", rev = "0c46e1c7dfc8fccbe7d43dcbd5c5db779dc6a5a1" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }
tokio-stream = "0.1"
anyhow = "1.0"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
