[package]
name = "vidproxy"
version = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

[[bin]]
name = "vidproxy"
path = "src/main.rs"

[dependencies]
# FFmpeg crates
ffmpeg-types.workspace = true
ffmpeg-source.workspace = true
ffmpeg-sink.workspace = true

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "signal", "sync"] }

# HTTP server
axum = "0.8"
tower-http = { version = "0.6", features = ["fs"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Temp directory
tempfile = "3"
